texgenpack/texgenpack.h

/*

Copyright (c) 2015 Harm Hanemaaijer <fgenfb@yahoo.com>

Permission to use, copy, modify, and/or distribute this software for any
purpose with or without fee is hereby granted, provided that the above
copyright notice and this permission notice appear in all copies.

THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

*/

#define NU_FILE_TYPES		6
#define FILE_TYPE_PNG		0x101
#define FILE_TYPE_PPM		0x102
#define FILE_TYPE_KTX		0x210
#define FILE_TYPE_PKM		0x201
#define FILE_TYPE_DDS		0x212
#define FILE_TYPE_ASTC		0x203
#define FILE_TYPE_IMAGE_BIT	0x100
#define FILE_TYPE_TEXTURE_BIT	0x200
#define FILE_TYPE_MIPMAPS_BIT	0x010
#define FILE_TYPE_UNDEFINED	0x000
#define FILE_TYPE_IMAGE_UNKNOWN 0x100
// Structures.

typedef struct {
	unsigned int *pixels;
	int width;
	int height;
	int extended_width;
	int extended_height;
	int alpha_bits;			// 0 for no alpha, 1 if alpha is limited to 0 and 0xFF, 8 otherwise.
	int nu_components;		// Indicates the number of components.
	int bits_per_component;		// 8 or 16.
	int is_signed;			// 1 if the components are signed, 0 if unsigned.
	int srgb;			// Whether the image is stored in sRGB format.
	int is_half_float;		// The image pixels are combinations of half-floats. The pixel size is 64-bit.
} Image;
#define TEXTURE_TYPE_UNCOMPRESSED_RGB8			0x2000
#define TEXTURE_TYPE_UNCOMPRESSED_RGBA8			0x2021
#define TEXTURE_TYPE_UNCOMPRESSED_ARGB8 		0x2022
#define TEXTURE_TYPE_UNCOMPRESSED_RGB_HALF_FLOAT	0x6402
#define TEXTURE_TYPE_UNCOMPRESSED_RGBA_HALF_FLOAT 	0x6422
#define TEXTURE_TYPE_UNCOMPRESSED_RG16			0x2400
#define TEXTURE_TYPE_UNCOMPRESSED_RG_HALF_FLOAT		0x6800
#define TEXTURE_TYPE_UNCOMPRESSED_R16			0x2401
#define TEXTURE_TYPE_UNCOMPRESSED_R_HALF_FLOAT		0x6400
#define TEXTURE_TYPE_UNCOMPRESSED_RG8			0x2001
#define TEXTURE_TYPE_UNCOMPRESSED_R8			0x2002
#define TEXTURE_TYPE_UNCOMPRESSED_SIGNED_RG16		0x2C00
#define TEXTURE_TYPE_UNCOMPRESSED_SIGNED_R16		0x2C01
#define TEXTURE_TYPE_UNCOMPRESSED_SIGNED_RG8		0x2801
#define TEXTURE_TYPE_UNCOMPRESSED_SIGNED_R8		0x2802
#define TEXTURE_TYPE_ETC1				0x0100
#define TEXTURE_TYPE_ETC2_RGB8				0x0101
#define TEXTURE_TYPE_ETC2_EAC				0x0162
#define TEXTURE_TYPE_ETC2_PUNCHTHROUGH			0x0123
#define TEXTURE_TYPE_R11_EAC				0x0400
#define TEXTURE_TYPE_RG11_EAC				0x0440
#define TEXTURE_TYPE_SIGNED_R11_EAC			0x0C00
#define TEXTURE_TYPE_SIGNED_RG11_EAC			0x0C40
#define TEXTURE_TYPE_ETC2_SRGB8				0x1104
#define TEXTURE_TYPE_ETC2_SRGB_PUNCHTHROUGH		0x1125
#define TEXTURE_TYPE_ETC2_SRGB_EAC			0x1166
#define TEXTURE_TYPE_DXT1				0x0200
#define TEXTURE_TYPE_DXT3				0x0261
#define TEXTURE_TYPE_DXT5				0x0262
#define TEXTURE_TYPE_DXT1A				0x0223
#define TEXTURE_TYPE_BPTC				0x0064
#define TEXTURE_TYPE_BPTC_FLOAT				0x4445
#define TEXTURE_TYPE_BPTC_SIGNED_FLOAT			0x4C46
#define TEXTURE_TYPE_RGTC1				0x0001
#define TEXTURE_TYPE_SIGNED_RGTC1			0x0C01
#define TEXTURE_TYPE_RGTC2				0x0041
#define TEXTURE_TYPE_SIGNED_RGTC2			0x0C41
#define TEXTURE_TYPE_RGBA_ASTC_4X4			0x8000
#define TEXTURE_TYPE_RGBA_ASTC_5X4			0x8001
#define TEXTURE_TYPE_RGBA_ASTC_5X5			0x8002
#define TEXTURE_TYPE_RGBA_ASTC_6X5			0x8003
#define TEXTURE_TYPE_RGBA_ASTC_6X6			0x8004
#define TEXTURE_TYPE_RGBA_ASTC_8X5			0x8005
#define TEXTURE_TYPE_RGBA_ASTC_8X6			0x8006
#define TEXTURE_TYPE_RGBA_ASTC_8X8			0x8007
#define TEXTURE_TYPE_RGBA_ASTC_10X5			0x8008
#define TEXTURE_TYPE_RGBA_ASTC_10X6			0x8009
#define TEXTURE_TYPE_RGBA_ASTC_10X8			0x800A
#define TEXTURE_TYPE_RGBA_ASTC_10X10			0x800B
#define TEXTURE_TYPE_RGBA_ASTC_12X10			0x800C
#define TEXTURE_TYPE_RGBA_ASTC_12X12			0x800D
#define TEXTURE_TYPE_SRGB8_ALPHA8_ASTC_4X4		0x9000
#define TEXTURE_TYPE_ALPHA_BIT				0x0020
#define TEXTURE_TYPE_ETC_BIT				0x0100
#define TEXTURE_TYPE_DXTC_BIT				0x0200
#define TEXTURE_TYPE_128BIT_BIT				0x0040
#define TEXTURE_TYPE_16_BIT_COMPONENTS_BIT		0x0400
#define TEXTURE_TYPE_SIGNED_BIT				0x0800
#define TEXTURE_TYPE_SRGB_BIT				0x1000
#define TEXTURE_TYPE_UNCOMPRESSED_BIT			0x2000
#define TEXTURE_TYPE_HALF_FLOAT_BIT			0x4000
#define TEXTURE_TYPE_ASTC_BIT				0x8000
typedef struct {
	int type;
	int ktx_support;
	int dds_support;
	const char *text1;
	const char *text2;
	int block_width;		// The block width (1 for uncompressed textures).
	int block_height;		// The block height (1 for uncompressed textures).
	int bits_per_block;		// The number of bits per block (per pixel for uncompressed textures).
	int internal_bits_per_block;	// The number of bits per block as stored internally (per pixel for uncompressed).
	int alpha_bits;
	int nu_components;
	int gl_internal_format;
	int gl_format;
	int gl_type;
	const char *dx_four_cc;
	int dx10_format;
	uint64_t red_mask, green_mask, blue_mask, alpha_mask;
} TextureInfo;
typedef struct BlockUserData_t BlockUserData;
typedef int (*TextureDecodingFunction)(const unsigned char *bitstring, unsigned int *image_buffer, int flags);
typedef double (*TextureComparisonFunction)(unsigned int *image_buffer, BlockUserData *user_data);
typedef int (*TextureGetModeFunction)(const unsigned char *bitstring);
typedef void (*TextureSetModeFunction)(unsigned char *bitstring, int flags);
typedef struct {
	unsigned int *pixels;
	int width;
	int height;
	int extended_width;
	int extended_height;
	int type;
	int bits_per_block;		// The bits per block of the real format. The internally used bits per block is
					// given by info->internal_bits_per_block.
	int block_width;
	int block_height;
	TextureDecodingFunction decoding_function;
	TextureComparisonFunction comparison_function;
	TextureComparisonFunction perceptive_comparison_function;
	TextureGetModeFunction get_mode_function;
	TextureSetModeFunction set_mode_function;
	TextureInfo *info;
} Texture;
struct BlockUserData_t {
	unsigned int *image_pixels;
	int image_rowstride;
	int x_offset;
	int y_offset;
	int flags;
	Texture *texture;
	unsigned char *alpha_pixels;
	unsigned int *colors;
	int stop_signalled;
	int pass;
	unsigned int *texture_pixels;
	unsigned int *texture_pixels_above;
	unsigned int *texture_pixels_left;
};
typedef void (*CompressCallbackFunction)(BlockUserData *user_data);
// Command line options defined in texgenpack.c

#define COMMAND_COMPRESS	0
#define COMMAND_DECOMPRESS	1
#define COMMAND_COMPARE		2
#define COMMAND_CALIBRATE	3
#define ORIENTATION_DOWN	1
#define ORIENTATION_UP		2
// Compression levels (0 to 50).

enum {
	// Compression level class 0 (levels 0 to 7).
	// Compress different blocks concurrently, populations_size = 256,
	// nu_generations = 100 + level * 25.
	COMPRESSION_LEVEL_CLASS_0 = 0,
	// Compression level class 1 (levels 8 to 32)
	// Compress the same block concurrently, number of tries is equal to
	// level value (8 to 32), nu_generations = 100.
	COMPRESSION_LEVEL_CLASS_1 = 8,
	// Compression level class 2 (levels 33 to 50)
	// Compress the same block concurrently, number of tries is 32,
	// nu_generations = 100 + 25 * (level - 32)
	COMPRESSION_LEVEL_CLASS_2 = 33,
};
// Ultra preset: Compress different blocks concurrenty, nu_generations = 100.
#define SPEED_ULTRA	(COMPRESSION_LEVEL_CLASS_0)
// Fast preset: Eight tries per block, nu_generations = 100.
#define SPEED_FAST	(COMPRESSION_LEVEL_CLASS_1)
// Medium preset: 16 tries per block, nu_generations = 100.
#define SPEED_MEDIUM	(COMPRESSION_LEVEL_CLASS_1 + 8)
// Slow preset 32 tries per block, nu_generations = 100.
#define SPEED_SLOW	(COMPRESSION_LEVEL_CLASS_1 + 24)
extern int command;
extern int option_verbose;
extern int option_max_threads;
extern int option_orientation;
extern int option_compression_level;
extern int option_progress;
extern int option_modal_etc2;
extern int option_allowed_modes_etc2;
extern int option_generations;
extern int option_islands;
extern int option_generations_second_pass;
extern int option_islands_second_pass;
extern int option_texture_format;
extern int option_flip_vertical;
extern int option_quiet;
extern int option_block_width;
extern int option_block_height;
extern int option_half_float;
extern int option_deterministic;
extern int option_hdr;
extern int option_perceptive;
// Defined in image.c

void load_image(const char *filename, int filetype, Image *image);
int load_mipmap_images(const char *filename, int filetype, int max_images, Image *image);
void save_image(Image *image, const char *filename, int filetype);
double compare_images(Image *image1, Image *image2);
int load_texture(const char *filename, int filetype, int max_mipmaps, Texture *texture);
void save_texture(Texture *texture, int nu_mipmaps, const char *filename, int filetype);
void convert_texture_to_image(Texture *texture, Image *image);
void destroy_texture(Texture *texture);
void destroy_image(Image *image);
void clone_image(Image *image1, Image *image2);
void clear_image(Image *image);
void pad_image_borders(Image *image);
void check_1bit_alpha(Image *image);
void convert_image_from_srgb_to_rgb(Image *source_image, Image *dest_image);
void convert_image_from_rgb_to_srgb(Image *source_image, Image *dest_image);
void copy_image_to_uncompressed_texture(Image *image, int texture_type, Texture *texture);
void flip_image_vertical(Image *image);
void print_image_info(Image *image);
void calculate_image_dynamic_range(Image *image, float *range_min_out, float *range_max_out);
void convert_image_from_half_float(Image *image, float range_min, float range_max, float gamma);
void convert_image_to_half_float(Image *image);
void extend_half_float_image_to_rgb(Image *image);
void remove_alpha_from_image(Image *image);
void add_alpha_to_image(Image *image);
void convert_image_from_16_bit_format(Image *image);
void convert_image_to_16_bit_format(Image *image, int nu_components, int signed_format);
void convert_image_from_8_bit_format(Image *image);
void convert_image_to_8_bit_format(Image *image, int nu_components, int signed_format);
// Defined in compress.c

void compress_image(Image *image, int texture_type, CompressCallbackFunction func, Texture *texture,
int genetic_parameters, float mutation_prob, float crossover_prob);
// Defined in mipmap.c

void generate_mipmap_level_from_original(Image *source_image, int level, Image *dest_image);
void generate_mipmap_level_from_previous_level(Image *source_image, Image *dest_image);
int count_mipmap_levels(Image *image);